begin firearm subcomponent info hierarchy

--- a/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
+++ b/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
@@ -126,6 +126,10 @@
         <Compile Include="PlayerInfo\IPlayerInfoWithRole.cs"/>
         <Compile Include="PlayerInfo\ItemInfoObtainer.cs"/>
         <Compile Include="PlayerInfo\Item\FirearmInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\Firearms\Attachments\AttachmentInfoExtensions.cs"/>
+        <Compile Include="PlayerInfo\Item\Firearms\Attachments\FirearmAttachmentInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\Firearms\Modules\FirearmModuleInfo.cs"/>
+        <Compile Include="PlayerInfo\Item\Firearms\Modules\ModuleInfoExtensions.cs"/>
         <Compile Include="PlayerInfo\Item\ItemInfoBase.cs"/>
         <Compile Include="PlayerInfo\Item\JailbirdInfo.cs"/>
         <Compile Include="PlayerInfo\Item\RadioInfo.cs"/>
