adjust LabApi configuration name

--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -22,7 +22,7 @@
         <Reference Include="Assembly-CSharp-firstpass"/>
         <Reference Include="CommandSystem.Core"/>
         <Reference Include="Mirror"/>
-        <Reference Include="LabApi" Condition="'$(Configuration)' == 'LabAPI'"/>
+        <Reference Include="LabApi" Condition="'$(Configuration)' == 'LabApi'"/>
         <Reference Include="PluginAPI" Condition="'$(Configuration)' == 'NWAPI'"/>
         <Reference Include="Pooling"/>
         <Reference Include="UnityEngine.CoreModule"/>
@@ -39,7 +39,7 @@
         <Using Include="System.Reflection"/>
         <Using Include="System.Reflection.Emit"/>
         <Using Include="HarmonyLib"/>
-        <Using Include="LabApi.Features.Wrappers" Condition="'$(Configuration)' == 'LabAPI'"/>
+        <Using Include="LabApi.Features.Wrappers" Condition="'$(Configuration)' == 'LabApi'"/>
         <Using Include="InventorySystem.Items"/>
         <Using Include="PluginAPI.Core" Condition="'$(Configuration)' == 'NWAPI'"/>
         <Using Include="UnityEngine"/>
