import Directory.Build.targets.user

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -3,4 +3,5 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <DocumentationFile>$(OutDir)$(AssemblyName).xml</DocumentationFile>
     </PropertyGroup>
+    <Import Project="Directory.Build.targets.user" Condition="Exists('Directory.Build.targets.user')"/>
 </Project>
