--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <DocumentationFile>$(OutDir)$(AssemblyName).xml</DocumentationFile>
+        <AssemblySearchPaths>$(AssemblySearchPaths);$(ReferencePath)</AssemblySearchPaths>
     </PropertyGroup>
     <Import Project="Directory.Build.targets.user" Condition="Exists('Directory.Build.targets.user')"/>
 </Project>
