use NuGet LabAPI + bump version

--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -19,12 +19,12 @@
         <Reference Include="Assembly-CSharp-firstpass"/>
         <Reference Include="CommandSystem.Core"/>
         <Reference Include="Mirror"/>
-        <Reference Include="LabApi"/>
         <Reference Include="Pooling"/>
         <Reference Include="UnityEngine.CoreModule"/>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Lib.Harmony" Version="2.2.2"/>
+        <PackageReference Include="Northwood.LabAPI" Version="1.0.2"/>
     </ItemGroup>
 </Project>
